--- a/tarifas.html
+++ b/tarifas.html
@@ -5,28 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clouds Cabañas</title>
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="wrapper">
-        <img src="images/logo.png" alt="Cabañas" />
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="images/logo.png" alt="Cabañas Cloud" />
+            </a>
 
-        <nav>
-          <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="cabanas.html">Cabañas</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="tarifas.html">Tarifas y Reservas</a></li>
-            <li><a href="ubicacion.html">Ubicacion</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-          </ul>
+            <button
+              class="navbar-toggler ms-auto"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarContent"
+              aria-controls="navbarContent"
+              aria-expanded="false"
+              aria-label="Abrir Navegación"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarContent">
+              <ul class="navbar-nav ms-auto">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="cabanas.html">Cabañas</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="tarifas.html">Tarifas y Reservas</a></li>
+                <li><a href="ubicacion.html">Ubicacion</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+              </ul>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
@@ -37,42 +66,78 @@
           Tarifas actualizadas 2021 con IVA incluido. Pueden sufrir cambios sin
           previo aviso.
           <p>
-            Elegantemente decoradas con detalles de diseño contemporáneo y
-            equipadas con la última tecnología de confort.
+            Elegantemente decoradas con detalles de diseño con0áneo y equipadas
+            con la última tecnología de confort.
           </p>
         </h3>
+
+        <div class="temporadas">
+          <div
+            class="
+              temporadas__temporada
+              temporadas__temporada-alta
+              temporadas__temporada-oscuro
+            "
+          >
+            <h2>Temporada Alta</h2>
+            <span>Noviembre-Febrero</span>
+          </div>
+
+          <div class="temporadas__temporada temporadas__temporada-media">
+            <h2>Temporada Media</h2>
+            <span>Marzo-Junio</span>
+          </div>
+
+          <div
+            class="
+              temporadas__temporada
+              temporadas__temporada-baja
+              temporadas__temporada-oscuro
+            "
+          >
+            <h2>Temporada Baja</h2>
+            <span>Julio-Octubre</span>
+          </div>
+        </div>
+
         <table class="tarifas-table">
           <thead>
             <tr>
               <th></th>
-              <th>Temporada Alta</th>
-              <th>Temporada Baja</th>
+              <th class="temp-alta">Temporada Alta</th>
+              <th class="temp-media">Temporada Media</th>
+              <th class="temp-baja">Temporada Baja</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>Habitacion Single</td>
               <td>8000</td>
+              <td>7750</td>
               <td>7500</td>
             </tr>
             <tr>
               <td>Habitacion Doble</td>
               <td>10300</td>
+              <td>9750</td>
               <td>9000</td>
             </tr>
             <tr>
               <td>Habitacion Triple</td>
               <td>13500</td>
+              <td>12450</td>
               <td>11500</td>
             </tr>
             <tr>
               <td>Habitacion Cuadruple</td>
               <td>14000</td>
+              <td>13500</td>
               <td>13000</td>
             </tr>
             <tr>
               <td>Suite doble</td>
               <td>14800</td>
+              <td>14300</td>
               <td>13800</td>
             </tr>
           </tbody>
