--- a/ubicacion.html
+++ b/ubicacion.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Cabañas Cloud - Un lugar cálido para escapar de la rutina. Ubicado en pleno corazón de Purmamarca."
+    />
+    <meta
+      name="keywords"
+      content="cabañas jujuy, cabañas purmamarca, cabañas verano, hoteles jujuy, hoteles purmamarca"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clouds Cabañas</title>
+    <title>Ubicación - Clouds Cabañas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,14 +30,14 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href=".">
               <img src="images/logo.png" alt="Cabañas Cloud" />
             </a>
 
@@ -50,7 +58,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="cabanas.html">Cabañas</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="tarifas.html">Tarifas y Reservas</a></li>
+                <li><a href="tarifas.html">Tarifas</a></li>
                 <li><a href="ubicacion.html">Ubicacion</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
               </ul>
