Arrreglos de textos

--- a/cabanas.html
+++ b/cabanas.html
@@ -78,10 +78,12 @@
           <div>
             <img />
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut
-              culpa amet distinctio et? Eius similique quidem voluptates beatae
-              eum hic libero. Consequuntur beatae enim deleniti corporis
-              aspernatur voluptas magnam optio.
+              Ofrecemos a nuestros huéspedes cabañas y habitaciones construídas
+              con materiales de la región (adobes, piedras y cañas), respetando
+              la arquitectura rústica milenaria pero dotadas del confort
+              necesario con el fin satisfacer los requerimientos mínimos de
+              nuestros huéspedes, sobre todo de aquellos que provienen de países
+              de cultura y costumbres diferentes a la sudamerica.
             </p>
           </div>
         </section>
