--- a/servicios.html
+++ b/servicios.html
@@ -85,10 +85,15 @@
             <div>
               <h2>Desayuno</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-                minus, cupiditate ducimus dignissimos a illo provident
-                exercitationem accusamus magni eos repudiandae. Maiores, quod?
-                Repudiandae quod, vel eius sunt consequuntur repellat?
+                Existen infinitas elecciones para comenzar un nuevo día, pero
+                quienes experimenten el desayuno en Clouds Cabañas solo
+                conocerán una. Desde la inigualable vista del salón o del
+                interior de las cabañas, hasta la gran diversidad de opciones
+                que ofrecemos harán del desayuno un momento memorable. Variadas
+                y deliciosas alternativas, plenas de colores, texturas y sabores
+                completarán la experiencia: frutas, fiambres, panes artesanales
+                y caseros, jugos, yogurts, cereales, mermeladas y facturas son
+                algunas de las más destacadas.
               </p>
             </div>
           </article>
@@ -111,10 +116,10 @@
             <div>
               <h2>SPA</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-                minus, cupiditate ducimus dignissimos a illo provident
-                exercitationem accusamus magni eos repudiandae. Maiores, quod?
-                Repudiandae quod, vel eius sunt consequuntur repellat?
+                Nuestro Spa y sus distintos programas priorizan tanto el cuidado
+                del cuerpo como el descanso. Esta experiencia se complementa con
+                un imponente entorno natural que invita a disfrutar a cada
+                instante la estadía en Clouds Cabañas.
               </p>
             </div>
           </article>
