--- a/reserva.html
+++ b/reserva.html
@@ -73,31 +73,33 @@
         <h1 class="title">Reservá</h1>
 
         <div class="reserva-form">
-          <div class="reserva-form-inputs">
-            <div class="reservas-form-input-container">
-              <label>Fecha llegada</label>
-              <input type="date" name="fecha_llegada" />
-            </div>
-            <div class="reservas-form-input-container">
-              <label>Fecha salida</label>
-              <input type="date" name="fecha_salida" />
-            </div>
-            <div class="reservas-form-input-container">
-              <label>Cantidad de pasajeros</label>
-              <input type="number" name="cantidad_pax" />
-            </div>
-            <div class="reservas-form-input-container">
-              <label>Habitación</label>
-              <select name="habitacion">
-                <option value="Simple">Simple</option>
-                <option value="Doble">Doble</option>
-                <option value="Triple">Triple</option>
-                <option value="Cuadruple">Cuádruple</option>
-              </select>
-            </div>
+          <form action="#" method="POST" id="formulario-reserva">
+            <div class="reserva-form-inputs">
+              <div class="reservas-form-input-container">
+                <label>Fecha llegada</label>
+                <input type="date" id="fecha_llegada" name="fecha_llegada" />
+              </div>
+              <div class="reservas-form-input-container">
+                <label>Fecha salida</label>
+                <input type="date" id="fecha_salida" name="fecha_salida" />
+              </div>
+              <div class="reservas-form-input-container">
+                <label>Cantidad de pasajeros</label>
+                <input type="number" id="cantidad_pax" name="cantidad_pax" />
+              </div>
+              <div class="reservas-form-input-container">
+                <label>Habitación</label>
+                <select id="habitacion" name="habitacion">
+                  <option value="Simple">Simple</option>
+                  <option value="Doble">Doble</option>
+                  <option value="Triple">Triple</option>
+                  <option value="Cuadruple">Cuádruple</option>
+                </select>
+              </div>
 
-            <button id="buscar-reserva">Buscar...</button>
-          </div>
+              <button id="buscar-reserva">Buscar...</button>
+            </div>
+          </form>
         </div>
 
         <div id="reserva-resultados"></div>
