Agrego ajax jquery y fixeo los values

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>Clouds Cabañas</title>
   </head>
@@ -172,6 +177,16 @@
           </div>
         </div>
       </div>
+
+      <div class="comentarios">
+        <div class="wrapper">
+          <h2>Los comentarios de nuestros huéspedes</h2>
+
+          <p class="texto-cargando-comentarios">Cargando...</p>
+
+          <div class="comentarios-container"></div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="wrapper">
@@ -181,4 +196,6 @@
       </div>
     </footer>
   </body>
+
+  <script src="js/comentarios.js"></script>
 </html>
