Se agregan animaciones y flujo completo de reserva

--- a/reserva.html
+++ b/reserva.html
@@ -77,6 +77,15 @@
       <div class="wrapper">
         <h1 class="title">Reservá</h1>
 
+        <div class="reserva-completa">
+          <h2>
+            Gracias por reservar con nosotros, esperemos con ansias su estadía
+            :)
+          </h2>
+
+          <p>- El equipo de Clouds Cabañas</p>
+        </div>
+
         <div class="reserva-form">
           <form action="#" method="POST" id="formulario-reserva">
             <div class="reserva-form-inputs">
